Fix Stretched Backgrounds

--- a/dev/scss/layout_prefold.scss
+++ b/dev/scss/layout_prefold.scss
@@ -97,8 +97,8 @@ li {
 
   .stretched-bg {
     background-repeat: no-repeat;
-    background-size: 200% 100%;  //stretch
-    filter: blur(10px) brightness(0.5);
+    background-size: 100% auto;  //stretch
+    filter: blur(10px) brightness(0.75);
     height: 100%;
     position: absolute;
     width: 100%;
